--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon server"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "author": "",
     "license": "ISC",
@@ -14,7 +15,9 @@
         "express-graphql": "^0.9.0",
         "graphql": "^15.0.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.9.10",
-        "nodemon": "^2.0.3"
+        "mongoose": "^5.9.10"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.4"
     }
 }
